<resources>
    <string name="phoneAppLabel">Phone</string>
    <string name="emergencyDialerIconLabel">Emergency call</string>
    <string name="phoneIconLabel">Phone</string>
    <string name="recentCallsIconLabel">Call log</string>
    <string name="fdnListLabel">FDN list</string>
    <string name="caller_name">Anil Yadav</string>
    <string name="group">Group</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="onHold">On hold</string>
    <string name="ongoing">Current call</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_timedOut">No response. Timed out</string>
    <string name="callFailed_server_unreachable">Server not available</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect user name or password</string>
    <string name="callFailed_out_of_network">Called from out of network</string>
    <string name="callFailed_server_error">Server error occurred. Try later</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM, or SIM error</string>
    <string name="callFailed_outOfService">Out of service area</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
    <string name="callFailed_cb_enabled">You cannot make outgoing calls while call barring is on.</string>
    <string name="callFailed_dsac_restricted">All calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls are restricted by access control.</string>
    <string name="callFailed_cdma_lockedUntilPowerCycle">Phone locked during rebooting.</string>
    <string name="callFailed_cdma_drop">Call dropped.</string>
    <string name="callFailed_cdma_intercept">Call intercepted.</string>
    <string name="callFailed_cdma_reorder">Reorder.</string>
    <string name="callFailed_cdma_SO_reject">Service Option Reject.</string>
    <string name="callFailed_cdma_retryOrder">Retry limit.</string>
    <string name="callFailed_cdma_accessFailure">Access failed.</string>
    <string name="callFailed_cdma_preempted">Preempted.</string>
    <string name="callFailed_cdma_notEmergency">An incorrect SIM is being used. Only emergency calls can be dialled.</string>
    <string name="callFailed_unobtainable_number">Invalid number</string>
    <string name="confCall">Conference call</string>
    <string name="call_lost">Call has been lost.</string>
    <string name="retry">Retry</string>
    <string name="call_lost_title">Call lost</string>
    <string name="mmiStarted">MMI code started</string>
    <string name="ussdRunning">USSD code running…</string>
    <string name="mmiCancelled">MMI code canceled</string>
    <string name="cancel">Cancel</string>
    <string name="menu_speaker">Speaker</string>
    <string name="menu_bluetooth">Bluetooth</string>
    <string name="menu_mute">Mute</string>
    <string name="menu_hold">Hold</string>
    <string name="menu_endCall">End call</string>
    <string name="menu_swapCalls">Swap calls</string>
    <string name="menu_mergeCalls">Merge calls</string>
    <string name="menu_addCall">Add call</string>
    <string name="menu_manageConference">Manage conference call</string>
    <string name="menu_showDialpad">Show keypad</string>
    <string name="menu_hideDialpad">Hide keypad</string>
    <string name="menu_answerAndHold">"Hold current call
&amp; answer"</string>
    <string name="menu_answerAndEnd">"End current call
&amp; answer"</string>
    <string name="ok">OK</string>
    <string name="menuButtonHint">Press Menu for call options.</string>
    <string name="menuButtonKeyboardDialHint">"Press Menu for call options  •  Use keyboard to dial"</string>
    <string name="menu_answer">Answer</string>
    <string name="menu_ignore">Ignore</string>
    <string name="manageConferenceLabel">Manage conference call</string>
    <string name="audio_mode_speaker">Speaker</string>
    <string name="audio_mode_earpiece">Handset earpiece</string>
    <string name="audio_mode_wired_headset">Wired headset</string>
    <string name="audio_mode_bluetooth">Bluetooth</string>
    <string name="wait_prompt_str">"Send the following tones?
"</string>
    <string name="pause_prompt_str">"Sending Tones
"</string>
    <string name="send_button">Send</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="pause_prompt_no">No</string>
    <string name="wild_prompt_str">Replace the wild character with</string>
    <string name="no_vm_number">Missing voicemail number</string>
    <string name="no_vm_number_msg">No voicemail number is stored on SIM card.</string>
    <string name="add_vm_number_str">Add number</string>
    <string name="dialer_emptyListWorking">Loading…</string>
    <string name="enterPin">Enter PIN to unlock SIM card</string>
    <string name="pinUnlocked">SIM unlocked</string>
    <string name="enterNewPin">New SIM PIN</string>
    <string name="verifyNewPin">Re-type new PIN</string>
    <string name="verifyFailed">SIM PINs you typed do not match. Please try again.</string>
    <string name="enterPuk">Enter PUK to unlock SIM card</string>
    <string name="badPuk">Incorrect PUK</string>
    <string name="buttonTxtContinue">Continue</string>
    <string name="call_settings">Call</string>
    <string name="additional_gsm_call_settings">Additional settings</string>
    <string name="labelCF">Call forwarding</string>
    <string name="mobile_networks">Mobile network settings</string>
    <string name="preferred_network_mode_title">Network mode</string>
    <string name="preferred_network_mode_summary">Change Network operating mode</string>
    <string name="preferred_network_mode_dialogtitle">Preferred network mode</string>
    <string name="data_enabled">Use packet data</string>
    <string name="data_enable_summary">Activate data network</string>
    <string name="roaming">Data roaming</string>
    <string name="roaming_enable">Connect to data services when roaming</string>
    <string name="roaming_disable">Connect to data services when roaming</string>
    <string name="throttle_data_usage">Data usage</string>
    <string name="toggle_internationalcall_title">International call lock</string>
    <string name="internationalcall_on">International call lock is enabled</string>
    <string name="internationalcall_off">International call lock is disabled</string>
    <string name="cdma_lte_data_service">Set up data service</string>
    <string name="tty_mode_option_title">TTY mode</string>
    <string name="tty_mode_option_summary">Set TTY mode</string>
    <string name="card_title_dialing">Dialling</string>
    <string name="hac_mode_title">Hearing aids</string>
    <string name="hac_mode_summary">Turn on hearing aid compatibility</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_no">No</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="description_image_button_one">one</string>
    <string name="description_image_button_two">two</string>
    <string name="description_image_button_three">three</string>
    <string name="description_image_button_four">four</string>
    <string name="description_image_button_five">five</string>
    <string name="description_image_button_six">six</string>
    <string name="description_image_button_seven">seven</string>
    <string name="description_image_button_eight">eight</string>
    <string name="description_image_button_nine">nine</string>
    <string name="description_image_button_star">star</string>
    <string name="description_image_button_zero">zero</string>
    <string name="description_image_button_pound">pound</string>
    <string name="menu_setRejectCall">Call rejection</string>
    <string name="menu_rejectMessages">Set reject messages</string>
    <string name="menu_callAlert">Call alert</string>
    <string name="menu_answeringEndCall">Call answering/ending</string>
    <string name="summary_answeringEndCall">Manage call answering/ending settings</string>
    <string name="menu_activateProximitySensor">Turn on proximity sensor</string>
    <string name="summary_activateProximitySensor">LCD turns off during calls</string>
    <string name="summary_setRejectCall">Manage Auto reject/accept mode</string>
    <string name="summary_editRejectMessages">Edit reject messages</string>
    <string name="summary_callAlert">Set call alerts</string>
    <string name="category_videoCallSettings">Video call settings</string>
    <string name="menu_videocallImage">Video call image</string>
    <string name="summary_videocallImage">Set default Hide me image</string>
    <string name="menu_ownVideoInReceivedCall">Own video in received call</string>
    <string name="summary_ownVideoInReceivedCall">Show live image to caller when user accepts video call</string>
    <string name="menu_useCallFailOption">Use call fail options</string>
    <string name="summary_useCallFailOption">Use alternative methods to reattempt failed call</string>
    <string name="hide">Hide me</string>
    <string name="switch_cam">Switch camera</string>
    <string name="bluetooth_call">Headset settings</string>
    <string name="toggle_videocall_title">Auto divert to voice call</string>
    <string name="videocall_summary">Video calls automatically switch to voice calls when dialed to numbers that do not support video calls</string>
    <string name="toggle_videocall_mode_title">Remote mode control</string>
    <string name="videocall_mode_on">Screen mode auto control that is effective when connected to a video call server is enabled</string>
    <string name="videocall_mode_off">Screen mode auto control that is effective when connected to a video call server is disabled</string>
    <string name="menu_captureImageViewer">Video Call contents box</string>
    <string name="summary_captureImageViewer">Captured images have been stored</string>
    <string name="lgt_service_global_auto_roaming">Auto Roaming</string>
    <string name="lgt_service_global_auto_roaming_summary">Auto Roaming Management</string>
    <string name="enable_flat_rate_org">Enable mobile data connection</string>
    <string name="kt_additional_service">Value-Added Service</string>
    <string name="category_voiceCallEqSettings">Call sound EQ settings</string>
    <string name="menu_voiceCallEqListSetting">Call sound EQ</string>
    <string name="summary_voiceCallEqListSetting">Set EQ for call sound.</string>
    <string name="menu_voiceCallEqAnalysisSetting">Personalised EQ</string>
    <string name="summary_voiceCallEqAnalysisSetting">Check optimised EQ for me.</string>
    <string name="videocallmessage_title">Video call quality info</string>
    <string name="videocallmessage_summary">Select to show pop-ups about video call quality</string>
    <string name="toggle_videocall_speaker">Speaker</string>
    <string name="videocall_speaker_on">Speaker on during video calls</string>
    <string name="videocall_speaker_off">Speaker off during video calls</string>
    <string name="toggle_videocall_indicator">Display video call icon</string>
    <string name="videocall_indicator_summary">Display an icon on indicator when video calls are supported</string>
    <string name="call_save_title">Voice call protection</string>
    <string name="call_save_enable">Voice call protection is enabled</string>
    <string name="call_save_disable">Voice call protection is disabled</string>
</resources>