<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0dip" android:textColor="@color/twcolor001" android:gravity="center" android:id="@id/state" android:layout_width="fill_parent" android:layout_height="22.0dip" android:layout_marginTop="3.3299866dip" android:text="@string/card_title_dialing" />
    <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="3.3299866dip">
        <FrameLayout android:layout_width="123.32999dip" android:layout_height="123.32999dip" android:layout_centerHorizontal="true">
            <ImageView android:id="@id/outgoing_contact_image" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/call_img_unknown" />
            <LinearLayout android:layout_gravity="bottom" android:orientation="horizontal" android:id="@id/mBirthdayLayoutForOutgoing" android:background="#77000000" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="24.0dip">
                <ImageView android:layout_gravity="center_vertical" android:id="@id/birthday_icon_outgoing" android:layout_width="24.0dip" android:layout_height="fill_parent" android:src="@drawable/call_birthday_icon" />
                <TextView android:textSize="17.329987dip" android:textColor="@color/twcolor001" android:gravity="center_vertical" android:id="@id/birthday_remained_days_outgoing" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="2.6599731dip" android:singleLine="true" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
    <TextView android:textSize="18.0dip" android:textColor="@color/twcolor001" android:gravity="center" android:id="@id/caller_name" android:layout_width="fill_parent" android:layout_height="25.0dip" android:layout_marginTop="4.669983dip" android:singleLine="true" />
    <TextView android:textSize="16.0dip" android:textColor="@color/twcolor003" android:gravity="center" android:id="@id/caller_num" android:layout_width="fill_parent" android:layout_height="22.0dip" android:layout_marginTop="0.6700001dip" />
    <LinearLayout android:gravity="center_vertical" android:id="@id/LockBlanklinearlayout1" android:layout_width="fill_parent" android:layout_height="24.0dip" android:layout_marginTop="4.0dip">
        <ImageView android:gravity="center" android:id="@id/facebook_icon" android:visibility="invisible" android:layout_width="28.0dip" android:layout_height="fill_parent" android:layout_marginLeft="25.0dip" android:src="@drawable/call_flickr_icon" />
        <TextView android:textSize="17.0dip" android:textColor="@color/twcolor001" android:gravity="left|center" android:id="@id/facebook_status" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="15.0dip" android:text="@string/caller_name" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/RelativeLayout02" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="21.0dip">
        <FrameLayout android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="14.0dip">
            <SurfaceView android:id="@id/near_end" android:visibility="visible" android:layout_width="187.0dip" android:layout_height="140.0dip" android:src="@drawable/call_img_unknown" />
            <ImageView android:id="@id/near_end_image" android:visibility="invisible" android:layout_width="187.0dip" android:layout_height="140.0dip" android:src="@drawable/call_img_unknown" />
            <ImageView android:id="@id/image_white_switch_camera_animation" android:background="@android:color/white" android:visibility="invisible" android:layout_width="187.0dip" android:layout_height="140.0dip" />
        </FrameLayout>
    </LinearLayout>
    <LinearLayout android:id="@id/linearlayout2" android:layout_width="fill_parent" android:layout_height="91.0dip" android:layout_marginLeft="10.699982dip" android:layout_marginTop="11.329987dip" android:layout_marginRight="10.699982dip" android:layout_marginBottom="12.0dip">
        <FrameLayout android:layout_width="90.69998dip" android:layout_height="fill_parent">
            <Button android:textSize="13.0dip" android:textColor="@drawable/minimize_subtext_color" android:gravity="center" android:id="@id/switch_camera" android:paddingTop="8.669983dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/switch_cam" android:maxLines="2" android:singleLine="false" android:drawableTop="@drawable/switch_camera_button" android:drawablePadding="-8.0dip" style="@style/InCallTouchButton" />
        </FrameLayout>
        <FrameLayout android:layout_width="90.69998dip" android:layout_height="fill_parent" android:layout_marginLeft="13.329987dip" android:layout_marginRight="13.329987dip">
            <Button android:textSize="16.0dip" android:textColor="@drawable/minimize_subtext_color" android:id="@id/hide" android:background="@drawable/incall_button" android:paddingTop="8.669983dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/hide" android:singleLine="true" android:drawablePadding="-3.3299866dip" />
        </FrameLayout>
        <FrameLayout android:layout_width="90.69998dip" android:layout_height="fill_parent">
            <Button android:textSize="16.0dip" android:textColor="@drawable/minimize_subtext_color" android:id="@id/endcall" android:background="@drawable/red_button" android:paddingTop="8.669983dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/cancel" android:singleLine="true" android:drawableTop="@drawable/call_end_outgoing" android:drawablePadding="-3.3299866dip" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>
